# Interactive_Solar_System

./: .env.example  .eslintrc.cjs  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  EDUCATIONAL_FEATURES.md  PROJECT_ARCHITECTURE.md  README.md  ar-fixes.css  debug.html  docker-compose.yml  hiro-marker.html  index.html  package-lock.json  package.json  playwright.config.ts  script.js  style.css  styles.css  tailwind.config.js  test-ar.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docker/: nginx.conf
js/: app.js  arVisualization.js  neuralNetwork.js
js/models/: optimizedNeuralNetwork.js
markers/: neural-network-marker.patt
public/: manifest.json
public/css/: styles.css
public/js/: ar-manager.js  fallback-view.js  main.js  neural-network.js
src/: App.tsx  index.css
src/components/: AdaptiveQualityManager.tsx  ControlPanel.tsx  CosmicEffects.tsx  EducationalDashboard.tsx  EnhancedPlanetMaterial.tsx  EnhancedStarfield.tsx  ErrorBoundary.tsx  FactDisplay.tsx  LessonPlayer.tsx  LoadingScreen.tsx  MobileOptimizedApp.tsx  MobileTouchControls.tsx  Moon.tsx  OptimizedMobileMaterials.tsx  Orbits.tsx  Planet.tsx  PlanetComparison.tsx  PlanetInfo.tsx  PlanetMaterial.tsx  QuizDisplay.tsx  SimpleSunMaterial.tsx  SolarSystem.tsx  Sun.tsx  SunMaterial.tsx  TimeScrubber.tsx
src/shaders/: atmosphere.frag  atmosphere.vert  planet.frag  planet.vert  starfield.glsl
src/stores/: useEducationStore.ts  useTimeStore.ts  useUIStore.ts
src/test/: setup.ts  (+2 more)
src/wasm/: Cargo.toml  build.sh
src/wasm/src/: lib.rs
tests/: solar-system.spec.ts
(+5 files in other folders)
